fix(accordion): fixing accordion to align documentation

--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -32,7 +32,7 @@
       border-radius: 4px;
     }
 
-    &:focus {
+    &:focus-visible {
       outline: none;
 
       &::before {
